Fix team page titles spacing

--- a/affinitic/skin/static/style.css
+++ b/affinitic/skin/static/style.css
@@ -330,6 +330,10 @@ color:#7E725B;
 margin-top:8px;
 }
 
+section.zaf-boyz-short-description h2{
+margin-bottom:6px;
+}
+
 
 /*** CLIENTS ***/
 article.client-listing{
